--- a/OpenCoreWeb/Views/Roles/Index.cshtml
+++ b/OpenCoreWeb/Views/Roles/Index.cshtml
@@ -7,7 +7,10 @@
 <h2>角色管理維護</h2>
 
 <p>
-    @Html.ActionLink("建立角色", "Create")
+    @Html.ActionLink("建立角色", "Create") | @Html.ActionLink("角色指派", "Index", "UserRoles") | @Html.ActionLink("回到管理總覽", "Index","Manage")
+</p>
+<p>
+    
 </p>
 <table class="table">
     <tr>
