[變更] 將自訂使用者管理機制實作部分抽離成一個類別庫

--- a/OpenCoreWeb/App_Code/RazorHelpFunctions.cshtml
+++ b/OpenCoreWeb/App_Code/RazorHelpFunctions.cshtml
@@ -14,4 +14,19 @@
 
         return usr.UserName;
     }
+
+    public static string GetRoleName(int RoleId)
+    {
+        My.Core.Infrastructures.Implementations.ApplicationRoleRepository rolerepo = new My.Core.Infrastructures.Implementations.ApplicationRoleRepository(new My.Core.Infrastructures.Implementations.Models.OpenWebSiteEntities());
+
+        var role = rolerepo.Find(RoleId);
+
+        if (role!=null)
+        {
+
+            return role.Name;
+        }
+
+        return "";
+    }
 }
