--- a/OpenCoreWeb/Views/Roles/Create.cshtml
+++ b/OpenCoreWeb/Views/Roles/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model My.Core.Infrastructures.Implementations.Models.ApplicationRole
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = OpenCoreWeb.MUI.PageMUI.RoleCreate;
 }
 
-<h2>Create</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm()) 
@@ -16,7 +16,7 @@
     @Html.HiddenFor(model=>model.LastUpdateUserId)
     @Html.HiddenFor(model=>model.LastUpdateTime)
     <div class="form-horizontal">
-        <h4>ApplicationRole</h4>
+        <h4>@OpenCoreWeb.MUI.PageMUI.ApplicationRole</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -29,14 +29,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="@OpenCoreWeb.MUI.ControlMUI.Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.BackToRole, "Index")
 </div>
 
 @section Scripts {
