--- a/OpenCoreWeb/Views/Roles/Delete.cshtml
+++ b/OpenCoreWeb/Views/Roles/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model My.Core.Infrastructures.Implementations.Models.ApplicationRole
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = OpenCoreWeb.MUI.PageMUI.RoleDelete;
 }
 
-<h2>Delete</h2>
+<h2>@OpenCoreWeb.MUI.PageMUI.RoleDelete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@OpenCoreWeb.MUI.ControlMUI.DeleteConfirmMessage</h3>
 <div>
-    <h4>ApplicationRole</h4>
+    <h4>@OpenCoreWeb.MUI.PageMUI.ApplicationRole</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -65,8 +65,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="@OpenCoreWeb.MUI.ControlMUI.Delete" class="btn btn-default" /> |
+            @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.BackToRole, "Index")
         </div>
     }
 </div>
