--- a/OpenCoreWeb/Views/Roles/Details.cshtml
+++ b/OpenCoreWeb/Views/Roles/Details.cshtml
@@ -1,13 +1,14 @@
 ﻿@model My.Core.Infrastructures.Implementations.Models.ApplicationRole
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = OpenCoreWeb.MUI.PageMUI.RoleDetails;   
+    
 }
 
-<h2>Details</h2>
+<h2>@ViewBag.Title</h2>
 
 <div>
-    <h4>ApplicationRole</h4>
+    <h4>@OpenCoreWeb.MUI.PageMUI.ApplicationRole</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,6 +62,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.Edit, "Edit", new { id = Model.Id }) |
+    @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.BackToRole, "Index")
 </p>
