--- a/OpenCoreWeb/Views/Roles/Edit.cshtml
+++ b/OpenCoreWeb/Views/Roles/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model My.Core.Infrastructures.Implementations.Models.ApplicationRole
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = OpenCoreWeb.MUI.PageMUI.RoleEdit;
 }
 
-<h2>Edit</h2>
+<h2>@ViewBag.Title</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>ApplicationRole</h4>
+        <h4>@OpenCoreWeb.MUI.PageMUI.ApplicationRole</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -32,14 +32,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="@OpenCoreWeb.MUI.ControlMUI.Save" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.BackToRole, "Index")
 </div>
 
 @section Scripts {
