--- a/OpenCoreWeb/Views/Roles/Index.cshtml
+++ b/OpenCoreWeb/Views/Roles/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<My.Core.Infrastructures.Implementations.Models.ApplicationRole>
 
 @{
-    ViewBag.Title = "角色管理維護";
+    ViewBag.Title =   OpenCoreWeb.MUI.PageMUI.RoleDashboard;
 }
 
-<h2>角色管理維護</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
-    @Html.ActionLink("建立角色", "Create") | @Html.ActionLink("角色指派", "Index", "UserRoles") | @Html.ActionLink("回到管理總覽", "Index","Manage")
+    @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.CreateRole, "Create") | @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.RoleAssign, "Index", "UserRoles") | @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.BackToManage, "Index", "Manage")
 </p>
 <p>
     
@@ -56,9 +56,9 @@
             @Html.DisplayFor(modelItem => item.LastUpdateTime)
         </td>
         <td>
-            @Html.ActionLink("編輯", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("詳細", "Details", new { id=item.Id }) |
-            @Html.ActionLink("刪除", "Delete", new { id=item.Id })
+            @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.Edit, "Edit", new { id = item.Id }) |
+            @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.Details, "Details", new { id = item.Id }) |
+            @Html.ActionLink(OpenCoreWeb.MUI.ControlMUI.Delete, "Delete", new { id = item.Id })
         </td>
     </tr>
 }
